Alignment of h1 indexes fixed.

--- a/app/scss/modules/_how-section.scss
+++ b/app/scss/modules/_how-section.scss
@@ -20,7 +20,7 @@
 			._index{
 				position: absolute;
 				// bottom: 5px;
-				top: 2em;
+				top: 2.38em;
 				left: -.8em;
 				line-height: 1em;
 				text-transform: lowercase;
